# genfx

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: FFmpegPipe.cpp  FFmpegPipe.h  MainFrame.cpp  MainFrame.h  PngEncoder.cpp  PngEncoder.h  Renderer.cpp  Renderer.h  Utils.h  main.cpp  stb_image_write.h
